--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+
 }
 .link {
   height: 40px;
@@ -82,6 +83,11 @@ p {
   border-radius: 10px;
   font-weight: 600;
 }
+a {
+  text-decoration: none;
+  color: var(--color-white);
+}
+
 .link:hover {
   cursor: pointer;
   background-color: var(--color-green);
